--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<meta charset="utf-8" />
+    	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<title>Utopic-Flowers</title>
 
 	<link rel="stylesheet" type="text/css" href="style.css">
